# openscad

./: .clang-format  .clang-tidy  .commitlintrc.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmessage  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .qmake.cache  .release-please-config.json  .release-please-manifest.json  .travis.yml  .uncrustify.cfg  BUILD_WINDOWS_VISUALSTUDIO.md  CGAL-Valgrind-Enable-Hack.patch  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTORS  COPYING  Dockerfile  Dockerfile.wasm-python-base  Doxyfile  GLView.h  Info.plist  Info.plist.in  LICENSE.MIT  MANIFEST.in  MainWindow.h  MainWindow.ui  OpenCSG-1.2.0-Reset-Hack.patch  OpenCSG-MacOSX-port.patch  OpenCSG-Reset-Hack.patch  OpenSCAD.icns  OpenSCAD.sdef  (+151 more)
libraries/python/stubs/: README.md  pyproject.toml  setup.py
src/nowide_standalone/: CMakeLists.txt
src/nowide_standalone/nowide/: args.hpp  cenv.hpp  config.hpp  convert.hpp  cstdio.hpp  cstdlib.hpp  encoding_errors.hpp  encoding_utf.hpp  filebuf.hpp  fstream.hpp  iostream.hpp  scoped_ptr.hpp  stackstring.hpp  system.hpp  utf.hpp  utf8_codecvt.hpp  windows.hpp
src/nowide_standalone/src/: iostream.cpp
src/nowide_standalone/test/: test.hpp  test_codecvt.cpp  test_convert.cpp  test_env.cpp  test_fs.cpp  test_fstream.cpp  test_iostream.cpp  test_stdio.cpp  test_system.cpp
submodules/: .clang-tidy  CMakeLists-Clipper2.txt  CMakeLists-OpenCSG.txt  CMakeLists.txt  OpenCSG.txt
tests/: .gitignore  CGAL_CMakeLists.txt  CGAL_CheckCXXFileRuns.cmake  CGAL_Macros.cmake  CGAL_SetupBoost.cmake  CGAL_config.h  CMakeCompilerSettings.cmake  CMakeDependencies.cmake  CMakeExecutables.cmake  CMakeLists.txt  CMakeMsys.cmake  CMakeParseArguments.cmake  CMakeTests.cmake  CMingw-cross-env.cmake  CMingw-env-cross.cmake  CSGTextCache.cc  CSGTextCache.h  CSGTextRenderer.cc  CSGTextRenderer.h  CTestCustom.template  CTest_Cross_Console.py  EnforceConfig.cmake  FindBoost.cmake  FindGLEW.cmake  FindGLIB2.cmake  FindLib3MF.cmake  FindPOTRACE.cmake  OffscreenContext.cc  OffscreenContext.h  OffscreenContext.mm  OffscreenContextGLX.cc  OffscreenContextWGL.cc  OffscreenView.cc  OffscreenView.h  OpenSCAD_Test_Console.py  PkgConfigTools.cmake  WinReadme.txt  bboxhelp.cc  bboxhelp.h  cakebaby.py  (+80 more)
tests/bad-json/: customizer-all-bad.json  customizer-all-bad.scad  customizer-all.json  full-test-fix-session.txt
tests/cmake/: EnforceConfig.cmake  GalliumFixes.cmake  ImageCompare.cmake  SetupCTestCustom.cmake  TestFunctions.cmake  check_dependencies.cmake  files.cmake  functions.cmake  tests.cmake  unused.cmake
tests/cmake/tests/: 3mf.cmake  amf.cmake  ast.cmake  camera.cmake  colorscheme.cmake  customizer.cmake  dxf.cmake  echo.cmake  expected_fail.cmake  experimental.cmake  obj.cmake  off.cmake  pdf.cmake  pov.cmake  relative_filenames.cmake  render.cmake  stl.cmake  svg.cmake  view_options.cmake
tests/data/3mf/: far-out-ring.3mf  ☠-3d.3mf
tests/data/amf/: cube-with-hole.amf  far-out-ring.amf  multi-volume-binary.amf  split_pyramid.amf  tetra_multicolor.amf  ☠-3D.amf
tests/data/dxf/: circle-small.dxf  ellipse-rot.dxf  far-out-shape.dxf  lwpolyline-closed.dxf  lwpolyline.dxf  multiple-layers.dxf  nothing-decimal-comma-separated.dxf  null-polygons.dxf  polygon-concave-simple.dxf  polygon-riser.dxf  transform-insert.dxf  ☠-2D.dxf
tests/data/json/: data.json
tests/data/modulecache-tests/: README.txt  cascade.sh  cascade2.sh  circularincludemain.scad  circularsecond.scad  includefrommodule.scad  includemissingsub.scad  mainsubsub.scad  mainusingerror.scad  moduleoverload.scad  modulewithinclude.scad  multiplecommon.scad  mymodule-lib.scad  radius.scad  simpleinclude.scad  use.scad  usemissing.scad  usenonexistingfile.scad
tests/data/nef3/: broken.nef3  cube.nef3
tests/data/off/: colors.off  far-out-ring.off  vertcube.le.b.off  vertcube.off  ☠-3D.off
tests/data/pov/: conversion-test.pov
tests/data/python/: gen_issue2342-template.py  gen_svg_viewbox_tests-template.py
tests/data/pythonscad/: align2d.py  children.py  children_iterator.py  csg-difference.py  csg-hull.py  csg-intersection.py  csg-minkowski-render.py  csg-union.py  edgetest.py  fillet.py  fillet_csg.py  flower.py  geometric-objects-circle.py  geometric-objects-cube.py  geometric-objects-cylinder.py  geometric-objects-polygon.py  geometric-objects-polyhedron.py  geometric-objects-sphere-render.py  geometric-objects-square.py  helix.py  hinge.py  issue-511.py  linext_xsect.py  (+27 more)
tests/data/pythonscad-3d-export/: colored-cube.py  colored-shapes.py
tests/data/pythonscad-echo/: add_parameter.py  add_parameter_extended.py  add_parameter_pure.py  asyncio-regression.py  bbox.py  call-openscad-function.py  call-openscad-function.scad  csg-minkowski.py  export-error-handling.py  geometric-objects-sphere.py  import-error-handling-permission.py  import-error-handling.py  inside.py  issue232-lookup-file-export-deprecation.py  issue386-pythonscad.py  itertest.py  multitool-exporter.py  object-mirror.py  object-resize.py  object-rotate.py  object-scale.py  osuse-variable.py  position.py  pythonscad-issue387.py  size.py  solid-attributes.py  solid-color-c.py  vectors.py
tests/data/pythonscad-export-3mf/: multi-color.py  multitool-single-file.py  single-color.py
tests/data/pythonscad-export-obj/: cube.py
tests/data/pythonscad-export-pov/: cube.py
tests/data/pythonscad-export-stl/: cube.py
tests/data/pythonscad-export-stl-bin/: cube.py
tests/data/pythonscad-export-svg/: square.py
tests/data/pythonscad-failing/: issue-801-fillet-collision.py
tests/data/pythonscad-laser/: laserbox.py  lasercar.py  lasercase.py  laserlamp.py  lasershelf.py  lasersphere.py
tests/data/pythonscad-multitool-export/: two-color-flag.py
tests/data/pythonscad-overlay/: csg-union.py  cube.py  rounded-cube.py
tests/data/pythonscad-overlay-echo/: overlay-identity.py
tests/uni-get-dependencies-python/: run-docker-tests.sh
tests/unittests/: CMakeLists.txt  TabManagerTest.cpp  TabManagerTest.h
winconsole/: CMakeLists.txt  winconsole.c  winconsole.pro
(+5018 files in other folders)
